--- a/source/catalog.html
+++ b/source/catalog.html
@@ -33,77 +33,211 @@
       </div>
     </nav>
   </header>
-  <main class="main-container">
-    <section class="main-intro">
-      <h1 class="main__title">Функциональное питание для котов</h1>
-      <p class="main_intro__text">Занялся собой? Займист котом!</p>
-      <img class="main-intro__img" src="/source/img/index-can-mobile.png" alt="Банка с едой для котов">
-      <a class="button main-intro__button" href="form.html">Подбор программы</a>
-    </section>
-    <section class="programs">
-      <h2 class="section__title visually-hidden">Программы питания</h2>
-      <div class="program-slim">
-        <h3 class="program__title">Похудение</h3>
-        <p class="program__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
-          Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-        <a class="program__link" href="catalog.html">Каталог slim</a>
-      </div>
-      <div class="program-pro">
-        <h3 class="program__title">Набор массы</h3>
-        <p class="program__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro
-          поможет вашему коту нарастить необходимые мышцы!</p>
-        <a class="program__link" href="catalog.html">Каталог slim</a>
-      </div>
-    </section>
-    <section class="advantages">
-      <h2 class="section__title">Как это работает</h2>
-      <ul class="advantage__list">
-        <li class="advantage__item advantage__item--nutrients">
-          <p class="advantage__description">Функциональное питание
-            содержит только полезные
-            питательные вещества.</p>
+  <main>
+    <h1 class="main__title">Каталог продукции</h1>
+    <section class="products">
+      <h2 class="visually-hidden">Список доступных товаров</h2>
+      <ul class="products__list">
+        <li class="product__card">
+          <img class="product__img" src="/source/img/catalog-cards-img/catalog-1-desktop1.png"
+            alt="Cat Energy PRO 500 г (Курица)">
+          <h3 class="product__title">Cat Energy PRO 500 г</h3>
+          <div class="product__description">
+            <ul class="description__list">
+              <li class="description__item">
+                <p class="weight">Масса</p>
+                <p class="wight-amount">500 г</p>
+              </li>
+              <li class="description__item">
+                <p class="weight">Вкус</p>
+                <p class="wight-amount">Курица</p>
+              </li>
+              <li class="description__item">
+                <p class="weight">Цена</p>
+                <p class="wight-amount">700 ₽</p>
+              </li>
+            </ul>
+          </div>
+          <button class="button product-order__button" type="button">Заказать</button>
         </li>
-        <li class="advantage__item advantage__item--consistency">
-          <p class="advantage__description">Выпускается в виде порошка,
-            который нужно лишь залить
-            кипятком и готово.</p>
+        <li class="product__card">
+          <img class="product__img" src="" alt="Cat Energy PRO 1000 г (Курица)">
+          <h3 class="product__title">Cat Energy PRO 1000 г</h3>
+          <div class="product__description">
+            <ul class="description__list">
+              <li class="description__item">
+                <p class="weight">Масса</p>
+                <p class="wight-amount">1000 г</p>
+              </li>
+              <li class="description__item">
+                <p class="weight">Вкус</p>
+                <p class="wight-amount">Курица</p>
+              </li>
+              <li class="description__item">
+                <p class="weight">Цена</p>
+                <p class="wight-amount">1000 ₽</p>
+              </li>
+            </ul>
+          </div>
+          <button class="button product-order__button" type="button">Заказать</button>
         </li>
-        <li class="advantage_item">
-          <p class="advantage__description advantage__item--meal">Замените один-два приема
-            обычной еды на наше
-            функциональное питание.</p>
+        <li class="product__card">
+          <img class="product__img" src="" alt="Cat Energy PRO 500 г (Рыба)">
+          <h3 class="product__title">Cat Energy PRO 500 г</h3>
+          <div class="product__description">
+            <ul class="description__list">
+              <li class="description__item">
+                <p class="weight">Масса</p>
+                <p class="wight-amount">500 г</p>
+              </li>
+              <li class="description__item">
+                <p class="weight">Вкус</p>
+                <p class="wight-amount">Рыба</p>
+              </li>
+              <li class="description__item">
+                <p class="weight">Цена</p>
+                <p class="wight-amount">700 ₽</p>
+              </li>
+            </ul>
+          </div>
+          <button class="button product-order__button" type="button">Заказать</button>
         </li>
-        <li class="advantage__item advantage__item--duration">
-          <p class="advantage__description">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
+        <li class="product__card">
+          <img class="product__img" src="" alt="Cat Energy PRO 1000 г (Рыба)">
+          <h3 class="product__title">Cat Energy PRO 1000 г</h3>
+          <div class="product__description">
+            <ul class="description__list">
+              <li class="description__item">
+                <p class="weight">Масса</p>
+                <p class="wight-amount">1000 г</p>
+              </li>
+              <li class="description__item">
+                <p class="weight">Вкус</p>
+                <p class="wight-amount">Рыба</p>
+              </li>
+              <li class="description__item">
+                <p class="weight">Цена</p>
+                <p class="wight-amount">1000 ₽</p>
+              </li>
+            </ul>
+          </div>
+          <button class="button product-order__button" type="button">Заказать</button>
+        </li>
+        <li class="product__card">
+          <img class="product__img" src="" alt="Cat Energy SLIM 500 г (Гречка)">
+          <h3 class="product__title">Cat Energy SLIM 500 г</h3>
+          <div class="product__description">
+            <ul class="description__list">
+              <li class="description__item">
+                <p class="weight">Масса</p>
+                <p class="wight-amount">500 г</p>
+              </li>
+              <li class="description__item">
+                <p class="weight">Вкус</p>
+                <p class="wight-amount">Гречка</p>
+              </li>
+              <li class="description__item">
+                <p class="weight">Цена</p>
+                <p class="wight-amount">400 ₽</p>
+              </li>
+            </ul>
+          </div>
+          <button class="button product-order__button" type="button">Заказать</button>
+        </li>
+        <li class="product__card">
+          <img class="product__img" src="" alt="Cat Energy SLIM 1000 г (Гречка)">
+          <h3 class="product__title">Cat Energy PRO 1000 г</h3>
+          <div class="product__description">
+            <ul class="description__list">
+              <li class="description__item">
+                <p class="weight">Масса</p>
+                <p class="wight-amount">500 г</p>
+              </li>
+              <li class="description__item">
+                <p class="weight">Вкус</p>
+                <p class="wight-amount">Гречка</p>
+              </li>
+              <li class="description__item">
+                <p class="weight">Цена</p>
+                <p class="wight-amount">700 ₽</p>
+              </li>
+            </ul>
+          </div>
+          <button class="button product-order__button" type="button">Заказать</button>
+        </li>
+        <li class="product__card">
+          <img class="product__img" src="" alt="Cat Energy SLIM 500 г (Рис)">
+          <h3 class="product__title">Cat Energy SLIM 500 г</h3>
+          <div class="product__description">
+            <ul class="description__list">
+              <li class="description__item">
+                <p class="weight">Масса</p>
+                <p class="wight-amount">500 г</p>
+              </li>
+              <li class="description__item">
+                <p class="weight">Вкус</p>
+                <p class="wight-amount">Рис</p>
+              </li>
+              <li class="description__item">
+                <p class="weight">Цена</p>
+                <p class="wight-amount">500 ₽</p>
+              </li>
+            </ul>
+          </div>
+          <button class="button product-order__button" type="button">Заказать</button>
+        </li>
+        <li class="product__card">
+          <h3>Показать еще 100500 товаров</h3>
+          <p>На самом деле вкусов гораздо больше!</p>
+          <button class="show-more__button" type="button">Показать все</button>
         </li>
       </ul>
     </section>
-    <section class="example">
-      <h2 class="section__title">Живой пример</h2>
-      <p class="example__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim.
-        Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов
-        в день. </p>
-      <div class="stats">
-        <div class="weight-stat">
-          <p class="weight-stat__number">5 кг</p>
-          <p class="weight-stat__text">снижение веса</p>
-        </div>
-        <div class="duration-stat">
-          <p class="duration-stat__number">60 дней</p>
-          <p class="duration-stat__text">затрачено времени</p>
-        </div>
-      </div>
-      <p class="spent-amount">Затраты на питание: 15 000 руб.</p>
-      <div class="example__compare-slider">
-        <img class="compare__img" src="/source/img/viewport=mobile.png" alt="">
-      </div>
+    <section class="products-extra">
+      <ul class="products-extra__list">
+        <li class="product-extra__card">
+          <h3 class="product-extra__title">Сахарозаменитель</h3>
+          <div class="product-extra__description">
+            <p class="product-extra__weight">1 упаковка (100 г)</p>
+            <p class="product-extra__price">200 ₽</p>
+          </div>
+          <button class="button product-order__button" type="button">Заказать</button>
+        </li>
+        <li class="product-extra__card">
+          <h3 class="product-extra__title">Питьевая вода</h3>
+          <div class="product-extra__description">
+            <p class="product-extra__weight">5 литров</p>
+            <p class="product-extra__price">50 ₽</p>
+          </div>
+          <button class="button product-order__button" type="button">Заказать</button>
+        </li>
+        <li class="product-extra__card">
+          <h3 class="product-extra__title">Молоко</h3>
+          <div class="product-extra__description">
+            <p class="product-extra__weight">1 литр</p>
+            <p class="product-extra__price">100 ₽</p>
+          </div>
+          <button class="button product-order__button" type="button">Заказать</button>
+        </li>
+        <li class="product-extra__card">
+          <h3 class="product-extra__title">Витамины</h3>
+          <div class="product-extra__description">
+            <p class="product-extra__weight">1 упаковка (30 г)</p>
+            <p class="product-extra__price">300 ₽</p>
+          </div>
+          <button class="button product-order__button" type="button">Заказать</button>
+        </li>
+      </ul>
     </section>
+    <div class="promotion">
+      <p>Закажите все и получите чехол для кота в подарок!</p>
+    </div>
     <section class="partnership">
       <h2 class="section__title section__title--small-size">Приглашаем к сотрудничеству дилеров!</h2>
       <p class="adress__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
       <img class="adress__img" src="/source/img/partnership-map-img.png" width="320" height="362" alt="Мы на ходимся здесь: ул. Большая
-      Конюшенная, д. 19/8
-      Санкт-Петербург">
+    Конюшенная, д. 19/8
+    Санкт-Петербург">
     </section>
   </main>
   <footer class="page-footer">
